kubernetes/applications/media-stack/bazarr/bazarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ui
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: bazarr.ghart.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
  tls:
    - hosts:
        - bazarr.ghart.space
      secretName: bazarr-tls
